# v1.04_1812

./: .editorconfig  .env.example  .env.produccion.template  .gitignore  .pre-commit-config.yaml  ANALISIS_EXHAUSTIVO_BD_CERTIFICACIONES.md  ANALISIS_EXHAUSTIVO_INFORMES.md  ANALISIS_INFORMES_ACCESS_VS_GENERADOR.md  COMO_VER_CAMBIOS_INFORMES.md  COMPARACION_APLICACION_VS_BD_ACCESS.md  COMPARACION_ENFOQUES.md  Definicion informes.docx  EJECUTAR_MIGRACION_AHORA.md  ESTRUCTURA_PROYECTO.md  GUIA_PRUEBA_MIGRACION.md  HidroFlowManager.spec  INICIO_RAPIDO_PRUEBA.md  INSTALACION.md  INSTALACION_Y_CONFIGURACION.md  INSTRUCCIONES_IMPORTACION.md  LICENSE.txt  LIMPIEZA_PROYECTO.md  LISTADO OTS.xlsx  MAQUETA_INFORME_ORDENES_TRABAJO.md  MEDICIONES OTS.xlsx  MEJORAS_UI_ESPECIFICACIONES_TECNICAS.md  MIGRATION_GUIDE.md  OPTIMIZACIONES_BACKEND.md  PLAN_PASO_A_PRODUCCION.md  PLAN_REFACTORIZACION_INTERFACES.md  PRECIOS UNITARIOS.xlsx  PYCHARM_SETUP.md  Para exportar.xlsx  Plantilla Listado Partes.dotx  README_BUILD.md  README_GENERAR_PARTES_PRUEBA.md  README_REFACTORIZACION.md  RESUMEN_MIGRACION_PARTES_FASE1.md  REVISION_BASE_DATOS.md  SCRIPTS_REFACTORIZACION.md  (+49 more)
.github/workflows/: ci.yml
INFORME TIPO/: Bajas contadores mes OCT 2025.xlsx  Cortes de agua mes DE OCTUBRE DE 2025.xlsx  Desatascos mes OCT 2025.xlsx  Ejecución acometidas mes DE OCT 2025.xlsx  Fosas sépticas mes de oct de 2025.xlsx  Instalación contadores mes DE OCTUBRE 2025.xlsx  Limpieza captaciones mes OCT 2025.xlsx  Limpieza redes mes OCTUBRE 2025.xlsx  Limpieza tamices mes DE OCTUBRE 2025.xlsx  Mantenimiento preventivo saneamiento mes OCTUBRE 2025.xlsx  Sustitución contadores mes OCT 2025.xlsx
dev_tools/: requirements-dev.txt
dev_tools/generadores/: crear_vista_partes_v2.py  debug_importacion_partes.py  generar_codigos_postales.py  generar_insert_partes.py  generar_script_decimales.py  insertar_partes_por_lotes.py
dev_tools/importacion/: importar_mediciones_ots.py  importar_partes_access.py
dev_tools/preparacion/: README.md  preparar_bd_produccion.ps1  (+1 more)
docs/: CHANGELOG.md  CHANGELOG_v2.0.md  COMPILACION_Y_DISTRIBUCION.md  DATABASE_README.md  DEV_GUIDE.md  DISEÑO_AGRUPACION_INFORMES.md  ESPECIFICACION_INFORMES.md  ESTRATEGIA_TESTING_PREPRODUCCION.md  FASE1_PREPARACION_DATOS.md  FASE2_LIMPIEZA_COMPLETADA.md  GENERACION_PDF.md  INFORME_MEJORAS_FUNCIONALES_UXUI.md  INFORME_MEJORAS_FUNCIONALES_UXUI_v2.md  LIMPIEZA_BRANCHES_GITHUB.md  MEJORAS_PARTES_README.md  Manual_Usuario_HydroFlow.md  PLAN_EXCELENCIA_INTERFACES.md  PLAN_LIMPIEZA_ARCHIVOS.md  PLAN_PASO_A_PRODUCCION.md  PRECIO_UNIT_EXPLICACION.md  PROYECTO_COMPLETADO.md  README_EJECUTAR.md  README_PLAN_IMPLEMENTACION.md  RESULTADOS_TESTS_Y_CORRECIONES.md  RESULTADO_LIMPIEZA_COMPLETA.md  SISTEMA_INFORMES_RESUMEN.md  SISTEMA_PLANTILLAS_PDF.md
ejemplos_informes_generados/: ANALISIS_COMPLETO.txt  Listado_Completo_Partes.csv  README.md  RESUMEN_EJECUTIVO.json
informes_exhaustivos/: README.md  RESUMEN_GLOBAL.json
informes_guardados/: README.txt
installer/: HydroFlowManager.iss  LEER_ANTES_DE_INSTALAR.txt  LEER_DESPUES_DE_INSTALAR.txt  QUICK_START.md  README.md  README_OLD.md  build_all.ps1  build_app.ps1  build_config.ps1  build_inno_setup.ps1  build_installer.ps1  build_installer_OLD.ps1  config_wizard.py  setup_wizard.py  setup_wizard_OLD.py
interface/: REFACTORING_GUIDE.md  cert_lotes_interfaz.py  combox_interfaz.py  customer_add_interfaz.py  customer_mod_interfaz.py  informes_interfaz.py  item_aux_add_interfaz.py  item_aux_type_add_interfaz.py  item_budget_add_interfaz.py  item_budget_mod_interfaz.py  item_budget_sub_interfaz.py  item_chapter_add_interfaz.py  login_interfaz.py  manager_interfaz.py  manager_project_interfaz.py  parts_add_budget_item_interfaz.py  parts_interfaz.py  parts_interfaz_v2.py  parts_interfaz_v2_fixed.py  parts_manager_interfaz.py  reg_catalog_hidro_add_interfaz.py  reg_catalog_hidro_mod_interfaz.py  reg_catalog_regis_add_interfaz.py  reg_catalog_regis_mod_interfaz.py  register_add_interfaz.py  register_element_add_interfaz.py  register_element_mod_interfaz.py  select_group_budget_interfaz.py  select_manager_project_interfaz.py  select_project_interfaz.py  typeUser_interfaz.py  update_budget_interfaz.py  user_bd_add_new_interfaz.py  user_company_add_interfaz.py  user_company_add_new_interfaz.py  user_company_mod_interfaz.py  user_customer_add_interfaz.py  user_customer_add_new_interfaz.py  user_customer_mod_interfaz.py  user_project_interfaz.py  (+2 more)
plantillas/: Plantilla Listado Partes.docx  README.md
script/: README_DECIMALES.md  README_IMPORTACION_MEDICIONES.md  README_INDICES.md  README_MYSQL_SETUP.md  __init__.py  actualizar_naturalezas.py  aplicar_decimales.py  budget_import.py  cargar_presupuesto.py  catalog_import.py  certification_export.py  check_mysql.py  corregir_nombres_municipios.sql  crear_backup.py  crear_dim_tipos_rep.sql  crear_vista_partes.py  ctk_xyframe.py  db_cache.py  db_config.py  db_connection.py  db_core.py  db_core_refactored_example.py  db_partes.py  db_user_config.py  ejecutar_fase2.ps1  ejecutar_migracion_manual.py  eliminar_dim_ot.sql  fase1_preparacion_datos.py  fase2_provincias_municipios.sql  fase3_comarcas_municipios.sql  generar_codigos_postales.py  generar_datos_prueba.py  generar_insert_partes.py  generar_script_decimales.py  generar_script_importacion.py  generar_sql_mediciones.py  importar_mediciones_ots.py  importar_partes_access.py  informes.py  informes_config.py  (+21 more)
scripts/: update_dim_red.sql  update_dim_tipo_trabajo.sql
tests/: README.md  conftest.py  test_certificaciones.py  test_flujo_completo.py  test_optimizaciones.py  test_presupuestos.py
tools/: README.md  alimentar_presupuestos_partes.py  configurar_instalacion.py  crear_backup_bd.py  detectar_columnas_precios.py  detectar_estructura_bd.py  ejecutar_limpieza.py  generar_ejemplos_informes.py  generar_todos_informes_exhaustivo.py  verificar_interfaces.py  verificar_interfaces_estatico.py
v1.04_1812/: .env  .gitignore  HidroFlowManager.spec  main.py  parts_list_window.py  requirements.txt  requirements.utf8.txt  test_imports.py
(+259 files in other folders)
